# ocular-pathology-classification

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
models/: best_history.json  best_model.pt  last_history.json  last_model.pt  latest_run_history.json
models/baseline/: baseline_history.json
models/best/: best_run_history.json
models/run_001/: best_model.pt
models/run_002/: best_model_2.pt  history_2.json
notebooks/: 01_eda.ipynb  02_results.ipynb
ocular_path_classif/: __init__.py  config.py  dataset.py  eval.py  evaluate.py  features.py  model.py  plots.py  train.py  transforms.py
ocular_path_classif/modeling/: predict.py  train.py
reports/: best_run_report  latest_run_report001.txt  report_best.txt
