[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ocular_path_classif"
version = "0.0.1"
description = "Deep learning\u2013based classification of ocular pathologies from fundus images"
authors = [
  { name = "John Le" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=python3.10.0"


[tool.ruff]
line-length = 99
src = ["ocular_path_classif"]
include = ["pyproject.toml", "ocular_path_classif/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ocular_path_classif"]
force-sort-within-sections = true

