[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ocular_path_classif"
version = "0.0.1"
description = "Deep learning–based classification of ocular pathologies from fundus images"
authors = [
  { name = "John Le" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "Pillow>=10.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.ruff]
line-length = 99
src = ["ocular_path_classif"]
include = ["pyproject.toml", "ocular_path_classif/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["ocular_path_classif"]
force-sort-within-sections = true